# dracula-EnzyZero

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chars.gperf  conanfile.py  pfusch  pfusch.cpp  settings.h
.cache/clangd/index/: colors.h.EC1C05814F30D6D1.idx  commands.h.0F4D83E6317A83FD.idx  coroutine.h.66A19E3867745614.idx  cursor.h.17440B949699A830.idx  flow_commands.cpp.670C7123A079647B.idx  grid.cpp.503B541090C9AA52.idx  grid.h.CADE62D4C860987A.idx  grid_base.h.4E893E592A91ECF9.idx  interpreter.cpp.FB38DB05AFE144AE.idx  (+17 more)
examples/: default.txt  even_odd.drac
include/: analyzer.h  board.h  board_base.h  board_init.h  colors.h  commands.h  common.h  coroutine.h  cursor.h  dice.h  dice_setup.h  event_base.h  game.h  game_event.h  global_ncurses.h  grid.h  grid_base.h  interpreter.h  ncurses.h  operator_base.h  operators.h  perf_hashtable.h  perf_hashtable_impl.h  perfect_hash.h  sink.h  snakes_ladders_board.h  snakes_ladders_list.h  stack.h  start_ncurses.h  statistic_containers.h  statistics.h  streambuf.h  thread_cb.h  ui.h  vec.h  window.h  window_base.h  window_manager.h  windows.h
include/ui/: colors.h  operator_base.h  operators.h  sink.h  start_ncurses.h  streambuf.h  window_base.h  windows.h
src/: curses.cpp  flow_commands.cpp  grid.cpp  grid_base.cpp  grid_operator.cpp  interpreter.cpp  io_commands.cpp  main.cpp  ncurses.cpp  perf_hashtable.cpp  perfect_hashtable.cpp  sink.cpp  stack_commands.cpp  thread_cb.cpp  ui.cpp  window_base.cpp  window_manager.cpp
src/ui/: operators.cpp  sink.cpp  window_base.cpp
test/: test.txt
tests/: flow_commands_test.cpp  perf_hashtable_test.cpp  stack_test.cpp
trash/: in_circle.cpp  test.txt  ui.h  ui_window_handlers.cpp  ui_window_handlers.h  window_manager.h
